docs/v0.2.0a81/_sources/reference/_autosummary/hpcflow.sdk.app.BaseApp.rst.txt
hpcflow.sdk.app.BaseApp
=======================

.. currentmodule:: hpcflow.sdk.app

.. autoclass:: BaseApp
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~BaseApp.clear_known_submissions_file
      ~BaseApp.get_OS_supported_schedulers
      ~BaseApp.get_config_path
      ~BaseApp.get_info
      ~BaseApp.get_parameter_task_schema_map
      ~BaseApp.get_user_data_dir
      ~BaseApp.load_builtin_template_component_data
      ~BaseApp.load_config
      ~BaseApp.load_template_components
      ~BaseApp.perm_error_retry
      ~BaseApp.read_known_submissions_file
      ~BaseApp.reload_config
      ~BaseApp.reload_template_components
      ~BaseApp.reset_config
      ~BaseApp.set_inactive_in_known_subs_file
      ~BaseApp.template_components_from_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~BaseApp.API_logger
      ~BaseApp.CLI_logger
      ~BaseApp.command_files
      ~BaseApp.config
      ~BaseApp.config_logger
      ~BaseApp.envs
      ~BaseApp.is_config_loaded
      ~BaseApp.is_template_components_loaded
      ~BaseApp.known_subs_file_name
      ~BaseApp.known_subs_file_path
      ~BaseApp.log
      ~BaseApp.logger
      ~BaseApp.parameters
      ~BaseApp.persistence_logger
      ~BaseApp.run_time_info
      ~BaseApp.runtime_info_logger
      ~BaseApp.scheduler_lookup
      ~BaseApp.scripts
      ~BaseApp.submission_logger
      ~BaseApp.task_schemas
      ~BaseApp.template_components
   
   